--- a/res/layout/view_list_item.xml
+++ b/res/layout/view_list_item.xml
@@ -3,15 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/tansparent"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
+
+    <com.dk.view.RoundImageView
+        android:id="@+id/image"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="30dp"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="80dp"
+        android:gravity="left|center_vertical"
         android:paddingLeft="20dp"
-        android:gravity="center"
-        android:text="Hello World"
-        android:textSize="12sp" />
+        android:text="Hello Charming~"
+        android:textSize="18sp" />
 
 </com.dk.view.FoldingView>
