--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -16,4 +16,10 @@
         android:showAsAction="never"
         android:title="translate"/>
 
+    
+    <item
+        android:id="@+id/action_scale_center"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="scale center"/>
 </menu>
